接前端和数据库