@@ -2,28 +2,41 @@ package com.myproject.springboot.APITest;
 
 
 import com.myproject.springboot.entity.PlanEntity;
-import com.myproject.springboot.mapper.PlanMapper;
+import com.myproject.springboot.mapper.PlanRepository;
 import com.myproject.springboot.service.impl.PlanServiceImpl;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.junit.jupiter.api.Test;
-import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.web.servlet.MockMvc;
+
 
 import java.util.ArrayList;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
 
+
+@SpringBootTest
+@AutoConfigureMockMvc
+@ExtendWith(MockitoExtension.class)
 public class PlanServiceTest{
     @Mock
-    private PlanMapper planMapper;
+    private PlanRepository planMapper;
 
     @InjectMocks
     private PlanServiceImpl planService;
+
+    @Autowired
+    private MockMvc mockMvc;
 
 
     private static AutoCloseable closeable;
@@ -44,61 +57,62 @@ public class PlanServiceTest{
         planEntity2.setPlanName("Plan 2");
         // 设置其他属性...
 
-        ArrayList<PlanEntity> planList = new ArrayList<>();
+        List<PlanEntity> planList = new ArrayList<>();
         planList.add(planEntity1);
         planList.add(planEntity2);
 
-        when(planMapper.getAll()).thenReturn(planList);
+        // 模拟返回值
+        when(planMapper.findAll()).thenReturn(planList);
+
+        // 执行测试
         List<PlanEntity> result = planService.getAll();
 
         // 验证结果
         Assertions.assertNotNull(result);
-        Assertions.assertEquals(result.getFirst().getPlanName(), "Plan 1");
-        Assertions.assertEquals(result.get(1).getPlanName(), "Plan 2");
-        verify(planMapper, times(1)).getAll();
-        // 创建 MockitoResultSet 和 MockitoJdbc 对象
-
+        Assertions.assertEquals("Plan 1", result.get(0).getPlanName());
+        Assertions.assertEquals("Plan 2", result.get(1).getPlanName());
+        verify(planMapper, times(1)).findAll(); // 验证调用
     }
 
     @Test
     public void testGetPlanByName() {
         PlanEntity plan = new PlanEntity();
         plan.setPlanName("Test Plan");
-        when(planMapper.getPlanByName("Test Plan")).thenReturn(plan);
+
+        // 模拟返回值
+        when(planMapper.findByPlanName("Test Plan")).thenReturn(plan);
 
         // 执行测试
         PlanEntity result = planService.getPlanByName("Test Plan");
 
         // 验证结果
         Assertions.assertNotNull(result);
-        Assertions.assertEquals(result.getPlanName(), "Test Plan");
-        verify(planMapper, times(1)).getPlanByName("Test Plan");
+        Assertions.assertEquals("Test Plan", result.getPlanName());
+        verify(planMapper, times(1)).findByPlanName("Test Plan"); // 验证调用
     }
 
     @Test
     public void testAddPlan() {
-        // Mock 数据
         PlanEntity plan = new PlanEntity();
         plan.setPlanName("Test Plan");
 
         // 执行测试
         planService.addPlan(plan);
 
-        // 验证是否调用了插入方法
-        verify(planMapper, times(1)).insertPlan(plan);
+        // 验证是否调用了保存方法
+        verify(planMapper, times(1)).save(plan);
     }
 
     @Test
     public void testUpdatePlan() {
-        // Mock 数据
         PlanEntity plan = new PlanEntity();
         plan.setPlanName("Test Plan");
 
         // 执行测试
         planService.updatePlan(plan);
 
-        // 验证是否调用了更新方法
-        verify(planMapper, times(1)).updatePlan(plan);
+        // 验证是否调用了保存方法
+        verify(planMapper, times(1)).save(plan);
     }
 
     @Test
@@ -107,12 +121,11 @@ public class PlanServiceTest{
         planService.deletePlan("Test Plan");
 
         // 验证是否调用了删除方法
-        verify(planMapper, times(1)).deletePlan("Test Plan");
+        verify(planMapper, times(1)).deletePlan("Test Plan"); // 假设您有这样的方法
     }
 
-
     @AfterAll
-    public static void releaseMocks() throws Exception {
-        closeable.close();
+    public static void releaseMocks() {
+        // 此处不需要实现，因为 @Mock 和 @InjectMocks 会自动处理
     }
 }
